# basic_algo

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/sensor_fusion_common/: DoubleArrayStamped.h  ExtEkf.h  ExtState.h
devel/include/sensor_fusion_core/: SSF_CoreConfig.h  sensor_fusion_coreConfig.h
devel/lib/image_process/: image_converter_node  image_to_video_node
devel/lib/image_to_video/: image_converter_node  image_to_video_node
devel/lib/image_undistort/: camera_info_read_node  image_undistort_node
devel/lib/path_output/: path_output_node
devel/lib/pkgconfig/: frame_conversion.pc  image_calibration.pc  image_process.pc  image_to_video.pc  image_undistort.pc  path_output.pc  ransac_line.pc  sensor_fusion_common.pc  sensor_fusion_core.pc  sensor_fusion_updates.pc
src/: src.kdev4
src/.kdev4/: src.kdev4
src/frame_conversion/: CMakeLists.txt  package.xml
src/frame_conversion/src/: .kdev_include_paths  frame_conversion.cpp
src/image_calibration/: CMakeLists.txt  package.xml
src/image_calibration/src/: camera_calibration.cpp
src/image_process/: CMakeLists.txt  package.xml
src/image_process/launch/: image_converter.launch  image_converter.launch~  image_to_video.launch  image_to_video.launch~
src/image_process/src/: image_to_video.cpp  rosimage_to_cvimage.cpp
src/image_undistort/: CMakeLists.txt
src/path_output/: CMakeLists.txt
src/ransac_line/: CMakeLists.txt
src/sensor_fusion/sensor_fusion_common/: CMakeLists.txt
src/sensor_fusion/sensor_fusion_common/msg/: ExtEkf.msg  ExtState.msg
(+57 files in other folders)
